<resources>
    <string name="app_name">Formular</string>

    <!-- Main Menu -->
    <string name="btn_create_group">Create a group</string>
    <string name="btn_join_group">Join to group</string>
    <string name="prgrss_searching_groups">Searching available groups…</string>
    <string name="prgrss_connecting_to_group">Connecting to the group…</string>
    <string name="toast_not_found_groups">Sorry, there aren\'t any group nearby</string>

    <!-- Group Creation Dialog -->
    <string name="label_group_name">Group name:</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Group Chat Activity -->
    <string name="send_button">Send</string>
    <string name="device_connected">%s device connected to the group</string>
    <string name="device_disconnected">%s device disconnected from the group</string>

    <string name="race_count_3">3</string>
    <string name="race_count_2">2</string>
    <string name="race_count_1">1</string>
    <string name="race_count_0">GO!</string>
    <string name="race_finish">FINISH!</string>
    <string name="race_lap">Lap %d / %d</string>
    <string name="race_position_0">1st</string>
    <string name="race_position_1">2nd</string>
    <string name="race_position_2">3rd</string>
    <string name="race_position_default">%dth</string>
    <string name="race">Race</string>
    <string name="host_race">Host Race</string>
    <string name="join_race">Join Race</string>
    <string name="customize">Customize</string>
    <string name="course_library">Course Library</string>
    <string name="search">Search</string>
    <string name="race_settings">Race Settings</string>
    <string name="_continue">Continue</string>
    <string name="spectators">Allow Spectators</string>
    <string name="cpus">Allow CPUs</string>
    <string name="race_cap_text">Racer Cap:</string>
    <string name="race_type_text">Race Type:</string>
    <string name="track_name">Track Name:</string>
</resources>
