<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tire_background"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="54sp"
        android:textStyle="bold"
        android:textColor="#DBDBDB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />
    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" >
        <Button
            android:id="@+id/button_play"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:text="@string/play"
            android:textSize="24sp"
            android:textStyle="normal"
            android:textAllCaps="true"
            android:background="#77FFFFFF" />
        <Button
            android:id="@+id/button_customize"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:text="@string/customize"
            android:textSize="24sp"
            android:textStyle="normal"
            android:background="#77FFFFFF" />
        <Button
            android:id="@+id/courseLibrary"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="8dp"
            android:text="@string/course_library"
            android:textSize="24sp"
            android:textStyle="normal"
            android:background="#77FFFFFF" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
